<resources>
    <string name="app_name">DinDinn Mini Assignment</string>
    <string name="hint_input_string">Input String</string>
    <string name="hint_input_steps">Steps to move</string>
    <string name="moveChars">Move Letters</string>
    <string name="nav_to_ass">Assignment#2</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="added1">added +1</string>
    <string name="filters">FILTERS</string>
    <string name="vegan">VEGAN</string>
    <string name="spicy">SPICY</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>